--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^15.0.2",
     "react-helmet": "^3.2.3",
     "react-redux": "^4.4.5",
+    "react-responsive": "^1.2.6",
     "react-router": "^3.0.0",
     "redux": "^3.5.2",
     "redux-logger": "^2.6.1",
