--- a/package.json
+++ b/package.json
@@ -10,21 +10,26 @@
     "build:watch": "nodemon --watch src/client --exec 'NODE_ENV=development webpack  --progress --config webpack.config.js'",
     "bundle:stats": "NODE_ENV=production webpack -p --config webpack.config.js --profile --json > stats.json",
     "bundle:analyse": "webpack-bundle-analyzer ./stats.json ./build --report --mode=static",
-    "srv:dev": "NODE_ENV=development DEBUG=peep* nodemon --watch src/server --exec 'babel-node src/server'",
+    "srv:dev": "NODE_ENV=development DEBUG=peep*,evtx* nodemon --watch src/server --exec 'babel-node src/server'",
     "test": "NODE_ENV=testing mocha --require babel-core/register --reporter spec \"./**/__test__/*.js\" ",
     "coverage": "NODE_ENV=testing nyc yarn test"
   },
   "dependencies": {
     "antd": "^2.5.2",
+    "async": "^2.1.5",
     "babel-watch": "^2.0.5",
     "body-parser": "^1.16.0",
     "compression": "^1.6.2",
     "cookie": "^0.3.1",
     "cookie-parser": "^1.4.3",
-    "date-fns": "^1.27.1",
+    "debug": "^2.6.1",
     "express": "^4.14.0",
     "express-session": "^1.15.0",
     "fetch-mock": "^5.8.1",
+    "ignore-styles": "^5.0.1",
+    "lodash": "^4.17.4",
+    "moment": "^2.17.1",
+    "mongobless": "^2.0.3",
     "morgan": "^1.7.0",
     "morgan-debug": "^2.0.0",
     "ramda": "^0.22.1",
@@ -54,9 +59,11 @@
     "babel-loader": "^6.2.8",
     "babel-plugin-import": "^1.1.0",
     "babel-plugin-ramda": "^1.1.6",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-latest": "^6.16.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
+    "chai": "^3.5.0",
     "css-loader": "^0.26.1",
     "enzyme": "^2.6.0",
     "eslint": "^3.11.1",
@@ -95,14 +102,9 @@
       "react"
     ],
     "plugins": [
+      "transform-decorators-legacy",
       "ramda",
-      [
-        "import",
-        {
-          "libraryName": "antd",
-          "style": "css"
-        }
-      ]
+      [ "import", { "libraryName": "antd", "style": "css" } ]
     ]
   }
 }
