--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
   },
   "dependencies": {
     "antd": "^2.5.2",
-    "async": "^2.1.5",
     "babel-watch": "^2.0.5",
     "body-parser": "^1.16.0",
     "compression": "^1.6.2",
@@ -27,9 +26,8 @@
     "express-session": "^1.15.0",
     "fetch-mock": "^5.8.1",
     "ignore-styles": "^5.0.1",
-    "lodash": "^4.17.4",
     "moment": "^2.17.1",
-    "mongobless": "^2.0.3",
+    "mongobless": "^2.1.1",
     "morgan": "^1.7.0",
     "morgan-debug": "^2.0.0",
     "ramda": "^0.22.1",
@@ -105,7 +103,13 @@
     "plugins": [
       "transform-decorators-legacy",
       "ramda",
-      [ "import", { "libraryName": "antd", "style": "css" } ]
+      [
+        "import",
+        {
+          "libraryName": "antd",
+          "style": "css"
+        }
+      ]
     ]
   }
 }
