--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mongobless": "^2.1.1",
     "morgan": "^1.7.0",
     "morgan-debug": "^2.0.0",
+    "njwt": "^0.4.0",
     "ramda": "^0.22.1",
     "react": "^15.0.2",
     "react-addons-test-utils": "^15.4.1",
