Add add method for company service

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "socket.io-cookie": "^0.0.1",
     "styled-components": "^1.2.1",
     "universal-fetch": "^1.0.0",
+    "uppercamelcase": "^1.1.0",
     "uuid": "^3.0.1"
   },
   "devDependencies": {
