--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,7 @@
   "extends": "airbnb",
   "rules": {
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
-    "react/forbid-prop-types": [0, { "forbid": ['any', 'array', 'object'] }]
+    "react/forbid-prop-types": [0, { "forbid": ['any', 'array', 'object'] }],
+    "max-len": [1, {"code": 150}],
   }
 }
