--- a/.eslintrc
+++ b/.eslintrc
@@ -9,5 +9,6 @@
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
     "react/forbid-prop-types": [0, { "forbid": ['any', 'array', 'object'] }],
     "max-len": [1, {"code": 150}],
+    "no-underscore-dangle": [0],
   }
 }
