--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "react-helmet": "^3.2.3",
     "react-redux": "^4.4.5",
     "react-responsive": "^1.2.6",
-    "react-router-dom": "next",
+    "react-router-dom": "^4.0.0-beta.7",
     "redux": "^3.5.2",
     "redux-logger": "^2.6.1",
     "redux-thunk": "^2.0.1",
