--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "redux": "^3.5.2",
     "redux-logger": "^2.6.1",
     "redux-thunk": "^2.0.1",
+    "reselect": "^2.5.4",
     "sanitize.css": "^4.1.0",
     "serve-favicon": "^2.3.2",
     "socket.io": "^1.7.2",
