--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.14.0",
     "express-session": "^1.15.0",
     "fetch-mock": "^5.8.1",
+    "history": "^4.5.1",
     "ignore-styles": "^5.0.1",
     "moment": "^2.17.1",
     "mongobless": "^2.1.1",
@@ -35,13 +36,15 @@
     "react": "^15.0.2",
     "react-addons-test-utils": "^15.4.1",
     "react-dom": "^15.0.2",
+    "react-google-login": "^2.8.2",
     "react-helmet": "^3.2.3",
     "react-redux": "^4.4.5",
     "react-responsive": "^1.2.6",
-    "react-router-dom": "^4.0.0-beta.7",
+    "react-router-dom": "next",
     "redux": "^3.5.2",
     "redux-logger": "^2.6.1",
     "redux-thunk": "^2.0.1",
+    "request": "^2.80.0",
     "reselect": "^2.5.4",
     "sanitize.css": "^4.1.0",
     "serve-favicon": "^2.3.2",
