--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "antd": "^2.5.2",
+    "async-validator": "^1.6.8",
     "babel-watch": "^2.0.5",
     "body-parser": "^1.16.0",
     "compression": "^1.6.2",
