--- a/.eslintrc
+++ b/.eslintrc
@@ -11,5 +11,11 @@
     "max-len": [1, {"code": 150}],
     "no-underscore-dangle": [0],
     "new-cap": [0],
+    "arrow-parens": [0],
+    "consistent-return": [0],
+    "no-confusing-arrow": [0],
+    "import/prefer-default-export": [0],
+    "import/no-named-as-default": [0],
+
   }
 }
