--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "bundle:stats": "NODE_ENV=production webpack -p --config webpack.config.js --profile --json > stats.json",
     "bundle:analyse": "webpack-bundle-analyzer ./stats.json ./build --report --mode=static",
     "srv:dev": "NODE_ENV=development DEBUG=peep*,evtx* nodemon --watch src/server --exec 'babel-node src/server'",
-    "test": "NODE_ENV=testing mocha --require ignore-styles --require babel-core/register --reporter spec \"./src/server/**/__test__/*.js\" ",
+    "test": "NODE_ENV=testing mocha --require ignore-styles --require babel-core/register --reporter spec \"./**/__test__/*.js\" ",
     "coverage": "NODE_ENV=testing nyc yarn test"
   },
   "dependencies": {
