--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "babel-loader": "^6.2.8",
     "babel-plugin-import": "^1.1.0",
     "babel-plugin-ramda": "^1.1.6",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-latest": "^6.16.0",
     "babel-preset-react": "^6.16.0",
@@ -96,17 +97,12 @@
     ]
   },
   "babel": {
-    "presets": [
-      [
-        "latest",
-        {
-          "modules": false
-        }
-      ],
+    "presets": [[ "latest", { "modules": false }],
       "stage-0",
       "react"
     ],
     "plugins": [
+      "syntax-dynamic-import",
       "transform-decorators-legacy",
       "ramda",
       [
